# FootballStatsML

asi-proj-app/: Dockerfile  api.py  fetch_data_from_s3.py  prepare_data_for_prediction.py  requirements.txt  start.py
asi-proj-app/data/database/: matches_results_separated.csv
asi-proj-app/data/models/away_goals_model/: learner.pkl  predictor.pkl
asi-proj-app/data/models/btts/: learner.pkl  predictor.pkl
asi-proj-app/data/models/goals_classification/: learner.pkl  predictor.pkl
asi-proj-app/front-end/: index.html
asi-proj-app/front-end/src/: App.tsx
asi-proj-kedro/: README.md  pyproject.toml  requirements.txt
asi-proj-kedro/conf/base/: catalog.yml  parameters_count_features_statistics.yml  parameters_for_traning_preparation.yml  parameters_upload_model.yml
asi-proj-kedro/src/asi_proj_kedro/: __init__.py  __main__.py  pipeline_registry.py  settings.py
asi-proj-kedro/src/asi_proj_kedro/pipelines/count_features_statistics/: __init__.py  nodes.py  pipeline.py
asi-proj-kedro/src/asi_proj_kedro/pipelines/data_preparation/: nodes.py  pipeline.py
asi-proj-kedro/src/asi_proj_kedro/pipelines/for_traning_preparation/: __init__.py  nodes.py  pipeline.py
asi-proj-kedro/src/asi_proj_kedro/pipelines/model_training/: nodes.py  pipeline.py
asi-proj-kedro/src/asi_proj_kedro/pipelines/upload_model/: __init__.py  nodes.py  pipeline.py
asi-proj-kedro/tests/pipelines/count_features_statistics/: test_pipeline.py
asi-proj-kedro/tests/pipelines/for_traning_preparation/: test_pipeline.py
asi-proj-kedro/tests/pipelines/upload_model/: test_pipeline.py
(+574 files in other folders)
